--- a/tox.ini
+++ b/tox.ini
@@ -1,8 +1,6 @@
 [tox]
-envlist = py25,py26,py27,py32,py33,pypy
+envlist = py25,py26,py27
 [testenv]
 deps=
-setenv=
-    PYTHONHASHSEED=0
 commands=
     python setup.py test
